# openCV_opdracht

./: .gitignore  README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/share/openCV/cmake/: openCVConfig.cmake
devel/share/opencv/cmake/: opencvConfig.cmake
install/: .rosinstall  setup.sh
src/: BestandInlezen.cpp  Calibration.hpp  ColorDetection.hpp  CommandLineParser.cpp  CommandLineParser.hpp  DetectShape.cpp  DetectShape.hpp  OpenCVontwerpen.asta  VideoCapture.hpp
src/opencv/: CMakeLists.txt  Calibration.cpp  ColorDetection.cpp  MainApplication.cpp  MainApplication.hpp  VideoCapture.cpp  detectShapes.hpp  file.txt  main.cpp  package.xml
